Bids now linked to backend, require captcha. Modified jobs to have start and end date, as well as null search values. Updated DBfor register jobs, bid and search (and API). Still need to integrate dates into search
